--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,22 +1,34 @@
 name: chuck
 description: "A new Flutter project."
-publish_to: 'none'
+publish_to: "none"
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.3.3 <4.0.0'
+  sdk: ">=3.3.0 <4.0.0"
+  flutter: ">=3.19.1"
 
 dependencies:
+  bloc: any
+  cupertino_icons: any
+  equatable: any
   flutter:
     sdk: flutter
-
-  cupertino_icons: ^1.0.6
+  flutter_bloc: any
+  flutter_localizations:
+    sdk: flutter
+  http: any
+  intl: any
+  meta: any
+  shared_preferences: any
 
 dev_dependencies:
+  bloc_test: any
   flutter_test:
     sdk: flutter
-
-  flutter_lints: ^3.0.0
+  mockingjay: any
+  mocktail: any
+  test: any
+  very_good_analysis: any
 
 flutter:
   uses-material-design: true
