--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -17,10 +17,17 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - uses: dart-lang/setup-dart@v1
 
-      - name: Install dependencies
-        run: flutter pub get
+      - name: Configure fvm
+        uses: kuhnroyal/flutter-fvm-config-action@v2
+
+      - name: Install flutter
+        uses: subosito/flutter-action@v2
+        with:
+          flutter-version: ${{ env.FLUTTER_VERSION }}
+
+      - name: Print Flutter/Dart version
+        run: flutter --version
 
       - name: Verify formatting
         run: dart format --output=none --set-exit-if-changed .
