install dependencies during github workflow
removed by mistake

--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -29,6 +29,9 @@ jobs:
       - name: Print Flutter/Dart version
         run: flutter --version
 
+      - name: Install dependencies
+        run: flutter pub get
+
       - name: Verify formatting
         run: dart format --output=none --set-exit-if-changed .
 
