--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -39,5 +39,5 @@ jobs:
       - name: Check test coverage
         uses: VeryGoodOpenSource/very_good_coverage@v3
         with:
-          path: '/coverage/lcov.info'
+          path: './coverage/lcov.info'
           min_coverage: 100
