--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
   "editor.tabSize": 2,
   "dart.lineLength": 80,
-  "dart.flutterSdkPath": ".fvm/versions/3.22.2",
+  "dart.flutterSdkPath": ".fvm/versions/3.32.4",
   "search.exclude": {
     "**/.fvm": true
   },
@@ -61,5 +61,6 @@
     ]
   },
   "java.configuration.updateBuildConfiguration": "automatic",
-  "cmake.configureOnOpen": false
+  "cmake.configureOnOpen": false,
+  "yaml.schemaStore.enable": false
 }
