--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -14,12 +14,13 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Configure fvm
-        uses: kuhnroyal/flutter-fvm-config-action@v2
+        uses: kuhnroyal/flutter-fvm-config-action/config@v3
+        id: fvm-config-action
 
       - name: Install flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: ${{ env.FLUTTER_VERSION }}
+          flutter-version: ${{ steps.fvm-config-action.outputs.FLUTTER_VERSION }}
 
       - name: Print Flutter/Dart version
         run: flutter --version
