--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,15 +2,16 @@
   "version": "0.2.0",
   "configurations": [
     {
+      "name": "Flutter",
+      "request": "launch",
+      "type": "dart",
+      "program": "lib/main.dart"
+    },
+    {
       "name": "Dart: Run all Tests",
       "type": "dart",
       "request": "launch",
       "program": "./test/"
-    },
-    {
-      "name": "Flutter",
-      "request": "launch",
-      "type": "dart"
     }
   ]
 }
